--- a/def/example.conf
+++ b/def/example.conf
@@ -1,9 +1,9 @@
 /example/example1
-    class \home_io\plugins\example\Example1
+    class \example\Example
     param1 value
     param2 value2
 
 /example/example2
-    class \home_io\plugins\example\Example1
+    class \example\Example
     param1 another value
     param2 another value again
