Conf files now support # comments

--- a/def/example.conf
+++ b/def/example.conf
@@ -1,8 +1,10 @@
+# Attach class Example to an endpoint
 /example/example1
-    class \example\Example
-    param1 value
+    class \example\Example # The class
+    param1 value 
     param2 value2
 
+# Second endpoint, using the same class but different starting values
 /example/example2
     class \example\Example
     param1 another value
